tests/ui/inference/cannot-infer-partial-try-return.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot-infer-partial-try-return.rs:20:9
   |
LL |         Ok(())
   |         ^^ cannot infer type of the type parameter `E` declared on the enum `Result`
   |
help: consider specifying the generic arguments
   |
LL |         Ok::<(), QualifiedError<_>>(())
   |           +++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
